Group dependencies by function not by target provide j2se and j2sews that can be used by java's -Djava.ext.dirs to provide tuscany jars :
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java@385670 13f79535-47bb-0310-9956-ffa450edef68