@@ -61,6 +61,53 @@
             <os family="mac"/>
         </condition>
 
+        <patternset id="tuscany.acceptance.emf.dependencies">
+                <include name="**/org/eclipse/emf/common/2.2.0-I200602160000/common-2.2.0-I200602160000.jar" />
+                <include name="**/org/eclipse/emf/ecore/2.2.0-I200602160000/ecore-2.2.0-I200602160000.jar" />
+                <include name="**/org/eclipse/emf/ecore-change/2.2.0-I200602160000/ecore-change-2.2.0-I200602160000.jar" />
+                <include name="**/org/eclipse/emf/ecore-xmi/2.2.0-I200602160000/ecore-xmi-2.2.0-I200602160000.jar" />
+                <include name="**/org/eclipse/xsd/xsd/2.2.0-I200602160000/xsd-2.2.0-I200602160000.jar" />
+        </patternset>
+        <patternset id="tuscany.acceptance.tc.specsdoimpl">  <!--jars which need to go into tomcat common/lib  -->
+                <include name="**/${tuscany.sca.acceptance.groupId}/sca-api/${tuscany.sca.acceptance.version}/sca-api-${tuscany.sca.acceptance.version}.jar" />
+                <include name="**/${tuscany.commonj.acceptance.groupId}/sdo-api/${tuscany.commonj.acceptance.version}/sdo-api-${tuscany.commonj.acceptance.version}.jar" />
+                <include name="**/${tuscany.acceptance.groupId}/tuscany-sdo-impl/${tuscany.acceptance.version}/tuscany-sdo-impl-${tuscany.acceptance.version}.jar" />
+        </patternset>
+        <patternset id="tuscany.acceptance.sca.core"> <!--jars which need to go into tomcat server/lib  -->
+                <include name="**/${tuscany.acceptance.groupId}/tuscany-common/${tuscany.acceptance.version}/tuscany-common-${tuscany.acceptance.version}.jar" />
+                <include name="**/${tuscany.acceptance.groupId}/tuscany-container-java/${tuscany.acceptance.version}/tuscany-container-java-${tuscany.acceptance.version}.jar" />
+                <include name="**/${tuscany.acceptance.groupId}/tuscany-core/${tuscany.acceptance.version}/tuscany-core-${tuscany.acceptance.version}.jar" />
+                <include name="**/${tuscany.acceptance.groupId}/tuscany-model/${tuscany.acceptance.version}/tuscany-model-${tuscany.acceptance.version}.jar" />
+
+
+                <include name="**/axis/axis-wsdl4j/1.2/axis-wsdl4j-1.2.jar" />  <!-- needed by core for wsdl4j -->
+                <include name="**/stax/stax-api/1.0/stax-api-1.0.jar" />
+        </patternset>
+        <patternset id="tuscany.acceptance.binding.axis2">
+                <include name="**/${tuscany.acceptance.groupId}/tuscany-binding-axis2/${tuscany.acceptance.version}/tuscany-binding-axis2-${tuscany.acceptance.version}.jar" />
+
+
+                <include name="**/asm/asm/2.2/asm-2.2.jar" />
+                <include name="**/axis/axis-wsdl4j/1.2/axis-wsdl4j-1.2.jar" />
+                <include name="**/axis2/axis2-core/0.94/axis2-core-0.94.jar" />
+                <include name="**/commons-codec/commons-codec/1.3/commons-codec-1.3.jar" />
+                <include name="**/commons-httpclient/commons-httpclient/3.0/commons-httpclient-3.0.jar" />
+                <include name="**/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar" />
+                <include name="**/log4j/log4j/1.2.12/log4j-1.2.12.jar" />
+                <include name="**/stax/stax-api/1.0/stax-api-1.0.jar" />
+                <include name="**/ws-commons/ws-policy/SNAPSHOT/ws-policy-SNAPSHOT.jar" />
+                <include name="**/woodstox/wstx-asl/2.8.2/wstx-asl-2.8.2.jar" />
+
+                <!--
+                <include name="**/axis/axis/1.2.1/axis-1.2.1.jar" />
+                <include name="**/axis/axis-jaxrpc/1.2.1/axis-jaxrpc-1.2.1.jar" />
+                <include name="**/axis/axis-saaj/1.2.1/axis-saaj-1.2.1.jar" />
+                <include name="**/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar" />
+                <include name="**/commons-discovery/commons-discovery/0.2/commons-discovery-0.2.jar" />
+                -->
+
+        </patternset>
+
         <target name="init">
                 <available property='tomcat.is.available' file='${tuscany.acceptance.tc.dir}/server/lib/catalina.jar' type='file' />
                 <available property='tuscany.acceptance.tomcat.zipped.available' file='${tuscany.acceptance.tomcat.zipped}' type='file' />
@@ -75,49 +122,6 @@
                 <fail />
         </target>
 
-        <patternset id="tuscany.acceptance.tc.common">  <!--jars which need to go into tomcat common/lib  -->
-                <include name="**/${tuscany.sca.acceptance.groupId}/sca-api/${tuscany.sca.acceptance.version}/sca-api-${tuscany.sca.acceptance.version}.jar" />
-                <include name="**/${tuscany.commonj.acceptance.groupId}/sdo-api/${tuscany.commonj.acceptance.version}/sdo-api-${tuscany.commonj.acceptance.version}.jar" />
-                <include name="**/${tuscany.acceptance.groupId}/tuscany-sdo-impl/${tuscany.acceptance.version}/tuscany-sdo-impl-${tuscany.acceptance.version}.jar" />
-        	<include name="**/${tuscany.acceptance.groupId}/tuscany-das-jdbc-${tuscany.acceptance.version}.jar" />
-        </patternset>
-        <patternset id="tuscany.acceptance.tc.server"> <!--jars which need to go into tomcat server/lib  -->
-                <include name="**/${tuscany.acceptance.groupId}/tuscany-tomcat/${tuscany.acceptance.version}/tuscany-tomcat-${tuscany.acceptance.version}.jar" />
-                <include name="**/${tuscany.acceptance.groupId}/tuscany-binding-axis2/${tuscany.acceptance.version}/tuscany-binding-axis2-${tuscany.acceptance.version}.jar" />
-                <include name="**/${tuscany.acceptance.groupId}/tuscany-common/${tuscany.acceptance.version}/tuscany-common-${tuscany.acceptance.version}.jar" />
-                <include name="**/${tuscany.acceptance.groupId}/tuscany-container-java/${tuscany.acceptance.version}/tuscany-container-java-${tuscany.acceptance.version}.jar" />
-                <include name="**/${tuscany.acceptance.groupId}/tuscany-core/${tuscany.acceptance.version}/tuscany-core-${tuscany.acceptance.version}.jar" />
-                <include name="**/${tuscany.acceptance.groupId}/tuscany-model/${tuscany.acceptance.version}/tuscany-model-${tuscany.acceptance.version}.jar" />
-        </patternset>
-        <patternset id="tuscany.acceptance.common.dependencies">
-                <include name="**/org/eclipse/emf/common/2.2.0-I200602160000/common-2.2.0-I200602160000.jar" />
-                <include name="**/org/eclipse/emf/ecore/2.2.0-I200602160000/ecore-2.2.0-I200602160000.jar" />
-                <include name="**/org/eclipse/emf/ecore-change/2.2.0-I200602160000/ecore-change-2.2.0-I200602160000.jar" />
-                <include name="**/org/eclipse/emf/ecore-xmi/2.2.0-I200602160000/ecore-xmi-2.2.0-I200602160000.jar" />
-                <include name="**/org/eclipse/xsd/xsd/2.2.0-I200602160000/xsd-2.2.0-I200602160000.jar" />
-         	<include name="**/org.apache.derby/derby/10.1.2.1/derby-10.1.2.1.jar" />
-        </patternset>
-        <patternset id="tuscany.acceptance.server.dependencies">
-                <include name="**/asm/asm/2.2/asm-2.2.jar" />
-                <include name="**/axis/axis-wsdl4j/1.2/axis-wsdl4j-1.2.jar" />
-                <!--
-                <include name="**/axis/axis/1.2.1/axis-1.2.1.jar" />
-                <include name="**/axis/axis-jaxrpc/1.2.1/axis-jaxrpc-1.2.1.jar" />
-                <include name="**/axis/axis-saaj/1.2.1/axis-saaj-1.2.1.jar" />
-                <include name="**/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar" />
-                <include name="**/commons-discovery/commons-discovery/0.2/commons-discovery-0.2.jar" />
-                -->
-                <include name="**/axis/axis-wsdl4j/1.2/axis-wsdl4j-1.2.jar" />
-                <include name="**/axis2/axis2-core/0.94/axis2-core-0.94.jar" />
-                <include name="**/commons-codec/commons-codec/1.3/commons-codec-1.3.jar" />
-                <include name="**/commons-httpclient/commons-httpclient/3.0/commons-httpclient-3.0.jar" />
-                <include name="**/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar" />
-                <include name="**/log4j/log4j/1.2.12/log4j-1.2.12.jar" />
-                <include name="**/stax/stax-api/1.0/stax-api-1.0.jar" />
-                <include name="**/ws-commons/ws-policy/SNAPSHOT/ws-policy-SNAPSHOT.jar" />
-                <include name="**/woodstox/wstx-asl/2.8.2/wstx-asl-2.8.2.jar" />
-
-        </patternset>
 
         <target name="tuscany.tomcat.unzipWindows" if="isWindows" depends='init,check.for.zip' description='Just unzip tomcat' unless='tomcat.is.available'>
                 <unzip src="${tuscany.acceptance.tomcat.zipped}" dest="${tuscany.acceptance.target.dir}" />
@@ -156,23 +160,27 @@
 
                 <copy todir="${tuscany.acceptance.tc.dir}/common/lib" flatten='true'>
                         <fileset dir="${tuscany.maven.repos.dir}">
-                                <patternset refid="tuscany.acceptance.tc.common" />
+                                <patternset refid="tuscany.acceptance.emf.dependencies" />
                         </fileset>
                         <fileset dir="${tuscany.maven.repos.dir}">
-                                <patternset>
-                                  <include name="**/org.osoa/jars/sca-api-${tuscany.acceptance.version}.jar" />
+                                <patternset refid="tuscany.acceptance.tc.specsdoimpl" />
+                        </fileset>
+                        <fileset dir="${tuscany.maven.repos.dir}">
+                                <patternset>  <!-- for db2 and das support -->
+                                  <include name="**/${tuscany.acceptance.groupId}/das/tuscany-das-rdb/${tuscany.acceptance.version}/tuscany-das-rdb-${tuscany.acceptance.version}.jar" />
+                                  <include name="**/org/apache/derby/derby/10.1.2.1/derby-10.1.2.1.jar" />
                                 </patternset>
-                        </fileset>
-                        <fileset dir="${tuscany.maven.repos.dir}">
-                                <patternset refid="tuscany.acceptance.common.dependencies" />
                         </fileset>
                 </copy>
                 <copy todir="${tuscany.acceptance.tc.dir}/server/lib" flatten='true'>
                         <fileset dir="${tuscany.maven.repos.dir}">
-                                <patternset refid="tuscany.acceptance.tc.server" />
+                                <patternset refid="tuscany.acceptance.sca.core" />
+                                <patternset>
+                                    <include name="**/${tuscany.acceptance.groupId}/tuscany-tomcat/${tuscany.acceptance.version}/tuscany-tomcat-${tuscany.acceptance.version}.jar" />
+                                </patternset>
                         </fileset>
                         <fileset dir="${tuscany.maven.repos.dir}">
-                                <patternset refid="tuscany.acceptance.server.dependencies" />
+                                <patternset refid="tuscany.acceptance.binding.axis2" />
                         </fileset>
                 </copy>
         </target>
@@ -184,6 +192,35 @@
                         </fileset>
                 </copy>
         </target>
+
+
+        <!-- provide a convenient -Djava.ext.dirs=  to run j2se samples -->
+        <target name="j2se" description='create a java extensions directory to run J2SE tuscany applications.'>
+                <property name="tuscany.acceptance.j2se.dir" value='${tuscany.acceptance.target.dir}/j2se' />
+                <mkdir dir="${tuscany.acceptance.j2se.dir}" />
+                <copy todir="${tuscany.acceptance.j2se.dir}" flatten='true'>
+                        <fileset dir="${tuscany.maven.repos.dir}">
+                                <patternset refid="tuscany.acceptance.emf.dependencies" />
+                                <patternset refid="tuscany.acceptance.tc.specsdoimpl" />
+                                <patternset refid="tuscany.acceptance.sca.core" />
+                        </fileset>
+                </copy>
+        </target>
+
+        <!-- provide a convenient -Djava.ext.dirs=  to run j2se and webservice export samples -->
+        <target name="j2sews" description='create a java extensions directory to run J2SE tuscany applications.'>
+                <property name="tuscany.acceptance.j2se.dir" value='${tuscany.acceptance.target.dir}/js2sews' />
+
+             <antcall target="j2se"  inheritAll='true' inheritRefs='true' >
+              </antcall>
+                <copy todir="${tuscany.acceptance.j2se.dir}" flatten='true'>
+                        <fileset dir="${tuscany.maven.repos.dir}">
+                                <patternset refid="tuscany.acceptance.binding.axis2" />
+                        </fileset>
+                </copy>
+        </target>
+
+
         <target name="backup.server.xml" depends="init" unless='tuscany.acceptance.tomcat.serverxmlorg.available'>
                 <copy file='${tuscany.acceptance.tc.dir}/conf/server.xml' tofile='${tuscany.acceptance.tc.dir}/conf/server.xml.original' />
         </target>
